--- a/css/main.css
+++ b/css/main.css
@@ -188,6 +188,7 @@ figure {
  */
 hr {
   -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
   box-sizing: content-box;
   height: 0; }
 
@@ -294,6 +295,7 @@ input {
  */
 input[type="checkbox"],
 input[type="radio"] {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   /* 1 */
   padding: 0;
@@ -442,35 +444,57 @@ img {
   margin-top: 30px !important;
   color: #252b4d;
   font-family: "montserratlight", sans-serif;
+  -webkit-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
   transition: all 0.5s ease; }
   .button--general, .button__mail {
     border-radius: 50px;
     color: white;
+    background-image: -webkit-gradient(linear, right top, left top, from(#f12e8a), to(#ff8651));
+    background-image: -webkit-linear-gradient(right, #f12e8a, #ff8651);
+    background-image: -o-linear-gradient(right, #f12e8a, #ff8651);
     background-image: linear-gradient(to left, #f12e8a, #ff8651);
+    -webkit-box-shadow: 0 1px 4px 0 #e443bb;
     box-shadow: 0 1px 4px 0 #e443bb; }
   .button--aqua {
     border: solid 1px #0bebb5; }
     .button--aqua.active, .button--aqua:hover {
       color: white;
+      background-image: -webkit-gradient(linear, left top, right top, from(#00d3ec), to(#12fb90));
+      background-image: -webkit-linear-gradient(left, #00d3ec, #12fb90);
+      background-image: -o-linear-gradient(left, #00d3ec, #12fb90);
       background-image: linear-gradient(to right, #00d3ec, #12fb90);
+      -webkit-box-shadow: 0 1px 4px 0 #0bebb5;
       box-shadow: 0 1px 4px 0 #0bebb5; }
   .button--blue {
     border: solid 1px #1ab9fa; }
     .button--blue.active, .button--blue:hover {
       color: white;
+      background-image: -webkit-gradient(linear, left top, right top, from(#1682fa), to(#1ee6fb));
+      background-image: -webkit-linear-gradient(left, #1682fa, #1ee6fb);
+      background-image: -o-linear-gradient(left, #1682fa, #1ee6fb);
       background-image: linear-gradient(to right, #1682fa, #1ee6fb);
+      -webkit-box-shadow: 0 1px 4px 0 #1ab9fa;
       box-shadow: 0 1px 4px 0 #1ab9fa; }
   .button--pink {
     border: solid 1px #e443bb; }
     .button--pink.active, .button--pink:hover {
       color: white;
+      background-image: -webkit-gradient(linear, right top, left top, from(#cf5afe), to(#ff2566));
+      background-image: -webkit-linear-gradient(right, #cf5afe, #ff2566);
+      background-image: -o-linear-gradient(right, #cf5afe, #ff2566);
       background-image: linear-gradient(to left, #cf5afe, #ff2566);
+      -webkit-box-shadow: 0 1px 4px 0 #e443bb;
       box-shadow: 0 1px 4px 0 #e443bb; }
   .button--orange {
     border: solid 1px #f58a39; }
     .button--orange.active, .button--orange:hover {
       color: white;
+      background-image: -webkit-gradient(linear, right top, left top, from(#f1bd2e), to(#fa4545));
+      background-image: -webkit-linear-gradient(right, #f1bd2e, #fa4545);
+      background-image: -o-linear-gradient(right, #f1bd2e, #fa4545);
       background-image: linear-gradient(to left, #f1bd2e, #fa4545);
+      -webkit-box-shadow: 0 1px 4px 0 #f58a39;
       box-shadow: 0 1px 4px 0 #f58a39; }
   .button--bussi {
     margin: 0 !important;
@@ -479,12 +503,14 @@ img {
     .button--bussi.active, .button--bussi:hover {
       color: white;
       background-color: #49a4b6;
+      -webkit-box-shadow: 0 1px 4px 0 #49a4b6;
       box-shadow: 0 1px 4px 0 #49a4b6; }
     .button--bussi.cerrar {
       border: solid 2px #162f47; }
       .button--bussi.cerrar.active, .button--bussi.cerrar:hover {
         color: white;
         background-color: #162f47;
+        -webkit-box-shadow: none;
         box-shadow: none; }
 
 .btnDudasyPreguntas {
@@ -498,6 +524,7 @@ img {
   border-radius: 50%;
   padding: 15px;
   z-index: 99999999;
+  -webkit-box-shadow: 2px 3px 7px rgba(27, 127, 204, 0.8);
   box-shadow: 2px 3px 7px rgba(27, 127, 204, 0.8);
   text-decoration: none; }
   .btnDudasyPreguntas.form {
@@ -549,8 +576,14 @@ img {
       bottom: 0;
       left: 0;
       content: '';
+      background-image: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#dee8ff));
+      background-image: -webkit-linear-gradient(top, #ffffff, #dee8ff);
+      background-image: -o-linear-gradient(top, #ffffff, #dee8ff);
       background-image: linear-gradient(to bottom, #ffffff, #dee8ff); }
   .bg--pttrn {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#dee8ff));
+    background-image: -webkit-linear-gradient(top, #ffffff, #dee8ff);
+    background-image: -o-linear-gradient(top, #ffffff, #dee8ff);
     background-image: linear-gradient(to bottom, #ffffff, #dee8ff); }
   .bg--negro {
     background-color: #252b4d; }
@@ -623,8 +656,14 @@ img {
         background-image: url("../img/bg2.jpg"); } }
     .bg--agroindustria::before {
       opacity: 0.7;
+      background-image: -webkit-gradient(linear, left top, left bottom, from(#00d3ec), to(#12fb90));
+      background-image: -webkit-linear-gradient(top, #00d3ec, #12fb90);
+      background-image: -o-linear-gradient(top, #00d3ec, #12fb90);
       background-image: linear-gradient(to bottom, #00d3ec, #12fb90); }
     .bg--agroindustria::after {
+      background-image: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#dee8ff));
+      background-image: -webkit-linear-gradient(top, #ffffff, #dee8ff);
+      background-image: -o-linear-gradient(top, #ffffff, #dee8ff);
       background-image: linear-gradient(to bottom, #ffffff, #dee8ff); }
   .bg--movilidad {
     background-image: url("../img/mbg3.jpg"); }
@@ -633,8 +672,14 @@ img {
         background-image: url("../img/bg3.jpg"); } }
     .bg--movilidad::before {
       opacity: 0.7;
+      background-image: -webkit-gradient(linear, left top, right top, from(#1682fa), to(#1ee6fb));
+      background-image: -webkit-linear-gradient(left, #1682fa, #1ee6fb);
+      background-image: -o-linear-gradient(left, #1682fa, #1ee6fb);
       background-image: linear-gradient(to right, #1682fa, #1ee6fb); }
     .bg--movilidad::after {
+      background-image: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#dee8ff));
+      background-image: -webkit-linear-gradient(top, #ffffff, #dee8ff);
+      background-image: -o-linear-gradient(top, #ffffff, #dee8ff);
       background-image: linear-gradient(to bottom, #ffffff, #dee8ff); }
   .bg--turismo {
     background-image: url("../img/mbg4.jpg"); }
@@ -643,8 +688,14 @@ img {
         background-image: url("../img/bg4.jpg"); } }
     .bg--turismo::before {
       opacity: 0.7;
+      background-image: -webkit-gradient(linear, right top, left top, from(#cf5afe), to(#ff2566));
+      background-image: -webkit-linear-gradient(right, #cf5afe, #ff2566);
+      background-image: -o-linear-gradient(right, #cf5afe, #ff2566);
       background-image: linear-gradient(to left, #cf5afe, #ff2566); }
     .bg--turismo::after {
+      background-image: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#dee8ff));
+      background-image: -webkit-linear-gradient(top, #ffffff, #dee8ff);
+      background-image: -o-linear-gradient(top, #ffffff, #dee8ff);
       background-image: linear-gradient(to bottom, #ffffff, #dee8ff); }
   .bg--social {
     background-image: url("../img/mbg5.jpg"); }
@@ -653,20 +704,33 @@ img {
         background-image: url("../img/bg5.jpg"); } }
     .bg--social::before {
       opacity: 0.7;
+      background-image: -webkit-gradient(linear, right top, left top, from(#f1bd2e), to(#fa4545));
+      background-image: -webkit-linear-gradient(right, #f1bd2e, #fa4545);
+      background-image: -o-linear-gradient(right, #f1bd2e, #fa4545);
       background-image: linear-gradient(to left, #f1bd2e, #fa4545); }
     .bg--social::after {
+      background-image: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#dee8ff));
+      background-image: -webkit-linear-gradient(top, #ffffff, #dee8ff);
+      background-image: -o-linear-gradient(top, #ffffff, #dee8ff);
       background-image: linear-gradient(to bottom, #ffffff, #dee8ff); }
 
 /* Errores */
 /* Cuerpo */
 nav {
+  background-image: -webkit-gradient(linear, right top, left top, from(#f12e8a), to(#ff8651));
+  background-image: -webkit-linear-gradient(right, #f12e8a, #ff8651);
+  background-image: -o-linear-gradient(right, #f12e8a, #ff8651);
   background-image: linear-gradient(to left, #f12e8a, #ff8651);
+  -webkit-box-shadow: 0 1px 4px 0 #e443bb;
   box-shadow: 0 1px 4px 0 #e443bb;
+  -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
   height: 64px;
   line-height: normal;
+  -webkit-transition: all 0.5s;
+  -o-transition: all 0.5s;
   transition: all 0.5s;
   position: fixed;
   top: 0;
@@ -694,6 +758,8 @@ nav {
       height: 64px;
       display: table-cell;
       vertical-align: middle;
+      -webkit-transition: border 0.5s;
+      -o-transition: border 0.5s;
       transition: border 0.5s; }
     nav .menu .active {
       border-bottom: 3px solid white; }
@@ -740,6 +806,7 @@ header {
 
 .logo {
   width: 450px;
+  -o-object-fit: contain;
   object-fit: contain;
   margin: 0 auto; }
 
@@ -766,6 +833,8 @@ header {
     right: 2em;
     display: none;
     padding: 1em 2em;
+    -webkit-transition: border 0.3s;
+    -o-transition: border 0.3s;
     transition: border 0.3s;
     text-align: center;
     border: 2px solid rgba(255, 255, 255, 0.25);
@@ -783,6 +852,7 @@ header {
     padding: 1em 2em;
     border-radius: 4px;
     background: #1ab9fa;
+    -webkit-box-shadow: 1px 1px 10px black;
     box-shadow: 1px 1px 10px black; }
   .link__faq {
     color: #e443bb; }
@@ -880,6 +950,7 @@ header {
   #section10 .patrocinadores figure img {
     margin: 0;
     position: relative;
+    -o-object-fit: contain;
     object-fit: contain;
     width: 90%;
     height: 100%; }
@@ -894,6 +965,7 @@ header {
   #section10 .aliados figure img {
     margin: 0;
     position: relative;
+    -o-object-fit: contain;
     object-fit: contain;
     width: 100%;
     height: 100%; }
@@ -972,9 +1044,15 @@ header {
     background-image: none; }
     .bg--agroindustria::before {
       opacity: 1;
+      background-image: -webkit-gradient(linear, left top, left bottom, from(#00d3ec), to(#12fb90));
+      background-image: -webkit-linear-gradient(top, #00d3ec, #12fb90);
+      background-image: -o-linear-gradient(top, #00d3ec, #12fb90);
       background-image: linear-gradient(to bottom, #00d3ec, #12fb90); }
     .bg--agroindustria::after {
       opacity: 1;
+      background-image: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#dee8ff));
+      background-image: -webkit-linear-gradient(top, #ffffff, #dee8ff);
+      background-image: -o-linear-gradient(top, #ffffff, #dee8ff);
       background-image: linear-gradient(to bottom, #ffffff, #dee8ff); }
   .movil {
     display: block !important; }
@@ -995,6 +1073,7 @@ header {
     -ms-transform: inherit;
     transform: inherit;
     height: 100%;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box; }
   #section0 .logo {
     width: 90%; }
@@ -1082,6 +1161,7 @@ form {
       border-radius: 10px;
       background-color: #252b4d;
       font: 18px "montserratlight", sans-serif;
+      -webkit-box-sizing: border-box;
       box-sizing: border-box;
       display: block;
       padding: 20px;
@@ -1089,25 +1169,35 @@ form {
       margin-bottom: 20px;
       font-size: 18px;
       outline: none;
+      -webkit-transition: all 0.2s ease-in-out;
+      -o-transition: all 0.2s ease-in-out;
       transition: all 0.2s ease-in-out;
       color: #f5f8ff; }
       form label input::-webkit-input-placeholder,
       form label textarea::-webkit-input-placeholder {
+        -webkit-transition: all 0.2s ease-in-out;
+        -o-transition: all 0.2s ease-in-out;
         transition: all 0.2s ease-in-out;
         color: rgba(255, 255, 255, 0.7);
         font: 18px Helvetica, Arial, sans-serif; }
       form label input::-moz-placeholder,
       form label textarea::-moz-placeholder {
+        -webkit-transition: all 0.2s ease-in-out;
+        -o-transition: all 0.2s ease-in-out;
         transition: all 0.2s ease-in-out;
         color: rgba(255, 255, 255, 0.7);
         font: 18px Helvetica, Arial, sans-serif; }
       form label input:-ms-input-placeholder,
       form label textarea:-ms-input-placeholder {
+        -webkit-transition: all 0.2s ease-in-out;
+        -o-transition: all 0.2s ease-in-out;
         transition: all 0.2s ease-in-out;
         color: rgba(255, 255, 255, 0.7);
         font: 18px Helvetica, Arial, sans-serif; }
       form label input::placeholder,
       form label textarea::placeholder {
+        -webkit-transition: all 0.2s ease-in-out;
+        -o-transition: all 0.2s ease-in-out;
         transition: all 0.2s ease-in-out;
         color: rgba(255, 255, 255, 0.7);
         font: 18px Helvetica, Arial, sans-serif; }
@@ -1144,6 +1234,8 @@ form {
       top: 0;
       left: 20px;
       opacity: 0;
+      -webkit-transition: all 0.2s ease-in-out;
+      -o-transition: all 0.2s ease-in-out;
       transition: all 0.2s ease-in-out; }
   form input:-webkit-autofill,
   form select:-webkit-autofill,
@@ -1163,6 +1255,7 @@ form {
   border-radius: 50%;
   padding: 15px 15px;
   z-index: 99999999;
+  -webkit-box-shadow: 2px 3px 7px #888888;
   box-shadow: 2px 3px 7px #888888; }
 
 .fbm img {
